Fixed z-index for cards

--- a/src/components/achievements/Card.css
+++ b/src/components/achievements/Card.css
@@ -49,7 +49,7 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 20%);
-    z-index: 555;
+    z-index: 100;
 }
 
 .card-content {
